exports[`filename-case > invalid(1): foo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\n 1`] = `

Filename: src/foo/foo_bar.mJS

Options:
- cases:
    camelCase: true
    kebabCase: true

Code:
   1 | foo();
   2 | foo();
   3 | foo();
   4 | foo();
   5 | foo();
   6 | foo();
   7 | foo();
   8 | foo();
   9 | foo();
  10 | foo();
  11 |

`;

exports[`filename-case > invalid(1): foo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\nfoo();\n 2`] = `

Message:
>  1 | foo();
     | ^ Filename is not in camel case or kebab case. Rename it to \`fooBar.mjs\` or \`foo-bar.mjs\`.
   2 | foo();
   3 | foo();
   4 | foo();
   5 | foo();
   6 | foo();
   7 | foo();
   8 | foo();
   9 | foo();
  10 | foo();
  11 |

`;

exports[`filename-case > invalid(2): /* Filename foo.JS */ 1`] = `

Filename: foo.JS

  1 | /* Filename foo.JS */

`;

exports[`filename-case > invalid(2): /* Filename foo.JS */ 2`] = `

Message:
> 1 | /* Filename foo.JS */
    | ^ File extension \`.JS\` is not in lowercase. Rename it to \`foo.js\`.

`;

exports[`filename-case > invalid(3): /* Filename foo.Js */ 1`] = `

Filename: foo.Js

  1 | /* Filename foo.Js */

`;

exports[`filename-case > invalid(3): /* Filename foo.Js */ 2`] = `

Message:
> 1 | /* Filename foo.Js */
    | ^ File extension \`.Js\` is not in lowercase. Rename it to \`foo.js\`.

`;

exports[`filename-case > invalid(4): /* Filename foo.jS */ 1`] = `

Filename: foo.jS

  1 | /* Filename foo.jS */

`;

exports[`filename-case > invalid(4): /* Filename foo.jS */ 2`] = `

Message:
> 1 | /* Filename foo.jS */
    | ^ File extension \`.jS\` is not in lowercase. Rename it to \`foo.js\`.

`;

exports[`filename-case > invalid(5): /* Filename index.JS */ 1`] = `

Filename: index.JS

  1 | /* Filename index.JS */

`;

exports[`filename-case > invalid(5): /* Filename index.JS */ 2`] = `

Message:
> 1 | /* Filename index.JS */
    | ^ File extension \`.JS\` is not in lowercase. Rename it to \`index.js\`.

`;

exports[`filename-case > invalid(6): /* Filename foo..JS */ 1`] = `

Filename: foo..JS

  1 | /* Filename foo..JS */

`;

exports[`filename-case > invalid(6): /* Filename foo..JS */ 2`] = `

Message:
> 1 | /* Filename foo..JS */
    | ^ File extension \`.JS\` is not in lowercase. Rename it to \`foo..js\`.

`;

exports[`filename-case > invalid(7): /* Filename foo.SPEC.JS */ 1`] = `

Filename: foo.SPEC.JS

  1 | /* Filename foo.SPEC.JS */

`;

exports[`filename-case > invalid(7): /* Filename foo.SPEC.JS */ 2`] = `

Message:
> 1 | /* Filename foo.SPEC.JS */
    | ^ File extension \`.JS\` is not in lowercase. Rename it to \`foo.SPEC.js\`.

`;
